# bioio-czi

./: .cookiecutter.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  README.md  SETUP.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  performance.yml
bioio_czi/: __init__.py  bounding_box.py  channels.py  metadata.py  metadata_ome.py  pixel_sizes.py  reader.py  reader_metadata.py  standard_metadata.py  utils.py  xml.py
bioio_czi/aicspylibczi_reader/: reader.py  subblock_metadata.py
bioio_czi/docs/: conf.py  index.rst
bioio_czi/pylibczirw_reader/: reader.py
bioio_czi/tests/: conftest.py  test_aicspylibczi_reader.py  test_pylibczirw_reader.py  test_reader.py  test_standard_metadata.py
bioio_czi/tests/resources/: NoSceneNames.czi  OverViewScan.czi  RGB-8bit-with-non-xy-dims.czi  RGB-8bit.czi  S=2_4x2_T=2=Z=3_CH=2.czi  example.txt  frame_acquisition_times_expected.json  ome_bounding_box_discrepant.czi  s_1_t_1_c_1_z_1.ome.tiff  variable_per_scene_dims.czi  variable_scene_shape_first_scene_pyramid.czi  w96_A1+A2.czi
docs/: conf.py  installation.rst
scripts/: TEST_RESOURCES_HASH.txt  benchmark.py  download_test_resources.py  upload_test_resources.py
