# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "bioio-czi"
description = "A Bioio reader plugin for reading czi images."
keywords = []
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { email = "brian.whitney@alleninstitute.org", name = "bioio-devs" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
  "aicspylibczi>=3.2.1",
  "aiohttp",
  "bioio-base>=3.0.0",
  "dask[array]>=2021.4.1",
  "fsspec>=2022.8.0",
  "lxml>=4.6",
  'lxml>=5; python_version >= "3.13"',
  "ome-types>=0.3.4",
  "pylibczirw",
  "python-dateutil>=2.9.0.post0",
  "requests",
  "xarray>=2022.6.0",
]

[project.urls]
Homepage = "https://github.com/bioio-devs/bioio-czi"
"Bug Tracker" = "https://github.com/bioio-devs/bioio-czi/issues"
Documentation = "https://bioio-devs.github.io/bioio-czi"
"User Support" = "https://github.com/bioio-devs/bioio-czi/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "pre-commit>=2.20.0",
]
test = [
  "coverage>=5.1",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."bioio.readers"]
bioio-czi = "bioio_czi"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "py.typed"]

# tools
[tool.black]
line-length = 88

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "scripts/*",
  # Excluded to keep the package size down
  "docs/*.pdf",
]

[tool.mypy]
files = "bioio_czi/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

# https://flake8.pycqa.org/en/latest/user/options.html
# https://gitlab.com/durko/flake8-pyprojecttoml
[tool.flake8]
max-line-length = 88
ignore = "E203,E402,W291,W503"
min-python-version = "3.10.0"
per-file-ignores = [
  "__init__.py:F401",
]
